row de párrafos para tamaño grande

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+body {
+    color:white;
+    font-family: "Roboto", sans-serif;
+}
 nav img {
     height: 1em;
+}
+i {
+    text-align: center;
 }
